Added implentation for getPetById