@@ -1,31 +1,20 @@
 package org.openapitools.api;
 
 import org.openapitools.model.Pet;
+import org.openapitools.configuration.PetConfiguration;
 
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
-import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Controller;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestHeader;
 import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.CookieValue;
-import org.springframework.web.bind.annotation.RequestParam;
-import org.springframework.web.bind.annotation.RequestPart;
-import org.springframework.web.multipart.MultipartFile;
 import org.springframework.web.context.request.NativeWebRequest;
 
-import jakarta.validation.constraints.*;
-import jakarta.validation.Valid;
-
 import java.util.List;
-import java.util.Map;
 import java.util.Optional;
-import java.util.Arrays;
 import jakarta.annotation.Generated;
+import java.util.ArrayList;
 
 @Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2025-08-12T01:40:17.501326+05:30[Asia/Kolkata]", comments = "Generator version: 7.6.0")
 @Controller
@@ -33,10 +22,12 @@ import jakarta.annotation.Generated;
 public class PetApiController implements PetApi {
 
     private final NativeWebRequest request;
+    private final PetConfiguration petConfiguration;
 
     @Autowired
-    public PetApiController(NativeWebRequest request) {
+    public PetApiController(NativeWebRequest request, PetConfiguration petConfiguration) {
         this.request = request;
+        this.petConfiguration = petConfiguration;
     }
 
     @Override
@@ -45,10 +36,32 @@ public class PetApiController implements PetApi {
     }
 
     @Override
-    public ResponseEntity<Pet> getPetById(@PathVariable("petId") Long petId) {
-        Pet pet = new Pet("doggie", Arrays.asList("photoUrls"));
-        pet.setId(petId);
-        return ResponseEntity.ok(pet);
+    public ResponseEntity<Pet> getPetById(Long petId) {
+        List<Pet> canine = new ArrayList<>();
+        Pet rex = new Pet("Rex", List.of("rex.jpg"));
+        rex.setId(1L);
+        canine.add(rex);
+        Pet buddy = new Pet("Buddy", List.of("buddy.jpg"));
+        buddy.setId(2L);
+        canine.add(buddy);
+
+        List<Pet> feline = new ArrayList<>();
+        Pet misty = new Pet("Misty", List.of("misty.jpg"));
+        misty.setId(1L);
+        feline.add(misty);
+        Pet shadow = new Pet("Shadow", List.of("shadow.jpg"));
+        shadow.setId(2L);
+        feline.add(shadow);
+
+        List<Pet> source = petConfiguration.isCanine() ? canine : feline;
+
+        for (Pet p : source) {
+            if (p.getId() != null && p.getId().equals(petId)) {
+                return ResponseEntity.ok(p);
+            }
+        }
+        
+        return new ResponseEntity<>(HttpStatus.NOT_FOUND);
     }
 
 }
